# python-companyatlas

./: .gitignore  README.md
django-companyatlas/: .gitignore  env.example  pyproject.toml
django-companyatlas/docs/: AI.md  development.md  purpose.md  structure.md
django-companyatlas/src/django_companyatlas/: __init__.py  apps.py  helpers.py  urls.py  views.py
django-companyatlas/src/django_companyatlas/admin/: __init__.py  address.py  company.py  data.py  document.py  event.py  person.py  referentiel.py
django-companyatlas/src/django_companyatlas/admin/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
django-companyatlas/src/django_companyatlas/data_sources/: governance_sources.csv
django-companyatlas/src/django_companyatlas/forms/: __init__.py  person.py
django-companyatlas/src/django_companyatlas/helpers/: address.py  company.py  source.py
django-companyatlas/src/django_companyatlas/management/commands/: load_referentiel.py
django-companyatlas/src/django_companyatlas/managers/: company.py  data.py  referentiel.py
django-companyatlas/src/django_companyatlas/managers/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
django-companyatlas/src/django_companyatlas/migrations/: 0001_initial.py  __init__.py
django-companyatlas/src/django_companyatlas/models/: __init__.py  address.py  company.py  data.py  document.py  event.py  person.py  referentiel.py  source.py
django-companyatlas/src/django_companyatlas/models/virtuals/: __init__.py  company.py  document.py  event.py  provider.py
django-companyatlas/src/django_companyatlas/templates/admin/django_companyatlas/backendinfo/: change_form.html
django-companyatlas/src/django_companyatlas/templates/admin/django_companyatlas/backendsearchresult/: change_list.html
django-companyatlas/tests/: settings.py  urls.py
python-companyatlas/: env.example  pyproject.toml
python-companyatlas/docs/: AI.md  README.md  development.md  purpose.md  structure.md
python-companyatlas/src/companyatlas/: __init__.py  helpers.py
python-companyatlas/src/companyatlas/commands/: __init__.py  code.py  documents.py  events.py  search.py
python-companyatlas/src/companyatlas/providers/: __init__.py
python-companyatlas/src/companyatlas/providers/europe/: __init__.py
python-companyatlas/src/companyatlas/providers/europe/france/: __init__.py  entdatagouv.py  huwise.py  inpi.py  insee.py
python-companyatlas/tests/: __init__.py  test_client.py
